Fixed colored a tag, forgot originally

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header>
       <h1>Friends List</h1>
-      <p class="tagline">All your friends, sorted by city</p>
+      <a href="#"><p class="tagline">All your friends, sorted by city</p></a>
     </header>
     <section>
       <h2>
